--- a/style/bio.css
+++ b/style/bio.css
@@ -1,5 +1,6 @@
 @import 'icon.css';
 @import 'colours.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 
 
 * {
@@ -23,8 +24,9 @@
 .content-box {
     height: 100%;
     grid-column: 1 / 2;
-    background-image: url(./blue-white-gradient-wallpaper-3.jpg.png)
-  
+    background-image: url(./blue-white-gradient-wallpaper-3.jpg.png);
+    font-family: roboto;
+    
 }
 
 .grid-3 {
@@ -64,48 +66,52 @@
     overflow: scroll;
     display: flex;
     flex-wrap: wrap;
-
+    letter-spacing: 7px;
+    
 }
 
 
 .fixed-menu-box {
     grid-column: 2 / 3;
     background-image: url(./1.jpg);
-   
+    
 }
 
 .grid-2 {
     height: 100%;
     display: grid;
     grid-template-rows: 0.2fr 0.6fr 0.2fr;
-
+    
 }
 
 .menu-box {
     grid-row: 1 / 2;
-  
+    
 }
 
 .menu-flex-box {
     margin: 15px 10px;
-     display: flex;
+    display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     font-size: 40px;
     color: silver;
-     
+    font-family: roboto;
+    
+    
 }
 
 
 .logo-box {
-   
+    
     grid-row: 2 / 3;
- 
+    filter: blur(1px);
+    
 }
 
 .logo-flex-box {
     height: 100%;
-     display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 150px;
@@ -114,51 +120,60 @@
 
 .page-number-icon {
     grid-row: 3 / 4;
- 
+    
 }
 
 .page-number-flex-box {
     height: 80%;
     margin: 15px 10px;
-     display: flex;
+    display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-     
+    
 }
 
-.dropbutton {
-    color: silver;
-    background: black;
-    border-radius: 50%;
+.menu-word {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    margin : 20px 0px;;
+    font-size: 50px;
+    /* background: white; */
+    border-radius: 70%;
     padding: 16px 16px; 
-     font-size: 40px; 
-
+    filter: blur(1px);
     
-  }
+    
+}
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1; 
-     min-width: 20%;
+    
+    min-width: 20%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
     z-index: 1;
-  }
-  
-  .dropdown-content a {
+}
+
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  .dropdown-content:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbutton {background-color: lightblue;}
+}
+
+.menu-word:hover {
+    color: lightblue;
+}
+
+
+.dropdown-content:hover {background-color: transparent;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbutton {background-color: lightblue;}
+
+
+
