--- a/style/bio.css
+++ b/style/bio.css
@@ -1,11 +1,11 @@
 @import 'icon.css';
 @import 'colours.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
-@import 'media-queries.css';
+
 
 
 * {
-    margin : 0;
+    margin : 0px;
 }
 
 .container {
@@ -41,8 +41,8 @@
     grid-column: 1 / 2;
     width: 5vw;
     height: 60vh;
-    margin: 30px;
-    padding: 20px;
+    margin: 3vh;
+    padding: 2vh;
     font-size: 10vh;
     color: white;
     display: flex;
@@ -62,12 +62,12 @@
     width: 38%;
     height: 100%;
     padding: 5% 5%; 
-    font-size: 50px;
+    font-size: 5vh;
     position: fixed;
     overflow: scroll;
     display: flex;
     flex-wrap: wrap;
-    letter-spacing: 7px;
+    letter-spacing: 0.7vh;
   
     
 }
@@ -92,11 +92,11 @@
 }
 
 .menu-flex-box {
-    margin: 15px 10px;
+    margin: 1.5vh 1vh;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    font-size: 40px;
+    font-size: 4vh;
     color: silver;
     font-family: roboto;
     
@@ -116,18 +116,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 150px;
+    font-size: 15vh;
     color: silver;
 }
 
 .page-number-icon {
     grid-row: 3 / 4;
+    height: 100%;
+    width: 100%;
     
 }
 
 .page-number-flex-box {
-    height: 80%;
-    margin: 15px 10px;
+    height: 100%;
+   padding: 0% 2%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -139,13 +141,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px;
-    margin : 20px 0px;;
-    font-size: 50px;
+    padding: 5vh;
+    margin : 2vh 0vh;;
+    font-size: 5vh;
     /* background: white; */
     border-radius: 70%;
-    padding: 16px 16px; 
-    filter: blur(1px);
+    padding: 1.6vh 1.6vh; 
+    filter: blur(0.1vh);
     
     
 }
@@ -161,7 +163,7 @@
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 1.2vh 1.6vh;
     text-decoration: none;
     display: block;
 }
