--- a/style/bio.css
+++ b/style/bio.css
@@ -1,7 +1,7 @@
 @import 'icon.css';
 @import 'colours.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
-
+@import 'media_queryBio-page.css';
 
 
 * {
@@ -39,10 +39,10 @@
 
 .bio-word-flex-box{
     grid-column: 1 / 2;
-    width: 5vw;
-    height: 60vh;
-    margin: 3vh;
-    padding: 2vh;
+    width: 5%;
+    height: 60%;
+    margin: 3%;
+    padding: 2%;
     font-size: 10vh;
     color: white;
     display: flex;
@@ -68,7 +68,7 @@
     display: flex;
     flex-wrap: wrap;
     letter-spacing: 0.7vh;
-  
+    
     
 }
 
@@ -92,7 +92,7 @@
 }
 
 .menu-flex-box {
-    margin: 1.5vh 1vh;
+    margin: 1.5% 1%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -129,7 +129,7 @@
 
 .page-number-flex-box {
     height: 100%;
-   padding: 0% 2%;
+    padding: 0% 2%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -141,12 +141,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5vh;
-    margin : 2vh 0vh;;
+    padding: 5%;
+    margin : 2% 0%;;
     font-size: 5vh;
     /* background: white; */
     border-radius: 70%;
-    padding: 1.6vh 1.6vh; 
+    padding: 1.6% 1.6%; 
     filter: blur(0.1vh);
     
     
@@ -163,7 +163,7 @@
 
 .dropdown-content a {
     color: black;
-    padding: 1.2vh 1.6vh;
+    padding: 1.2% 1.6%;
     text-decoration: none;
     display: block;
 }
